@@ -43,15 +43,6 @@ namespace CIAO
    * to register these stuff automatically.
    */
   CIAO_BASE_STUB_Export int Server_init (CORBA::ORB_ptr o);
-
-  namespace Utility
-  {
-    /// Write a string (usually a stringified IOR) to a file
-    /// designated by the @c pathname.  The file named will always get
-    /// overwritten.
-    CIAO_BASE_STUB_Export int write_IOR (const ACE_TCHAR *pathname,
-                                              const char *IOR);
-  }
 }
 
 #include /**/ "ace/post.h"
